# openapi.json
@@ -307,6 +307,7 @@
           "unfingerprintable",
           "tagged",
           "writeRefused",
+          "tagUnreadable",
           "failed",
           "cancelled"
         ],
@@ -360,6 +361,10 @@
             "format": "int32"
           },
           "writeRefused": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "tagUnreadable": {
             "type": "integer",
             "format": "int32"
           },
